<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/title_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/basic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Spinner
                android:id="@+id/spinner_basic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/title_basic"
                />

            <TextView
                android:id="@+id/title_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/dialog"
                app:layout_constraintTop_toBottomOf="@+id/spinner_basic"
                />

            <Spinner
                android:id="@+id/spinner_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:spinnerMode="dialog"
                android:prompt="@string/social"
                app:layout_constraintTop_toBottomOf="@+id/title_prompt"
                />

            <TextView
                android:id="@+id/title_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/background"
                app:layout_constraintTop_toBottomOf="@+id/spinner_prompt"
                />

            <Spinner
                android:id="@+id/spinner_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/title_drawable"
                android:background="@drawable/spinner_selector"
                />

            <TextView
                android:id="@+id/title_custom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/custom_layout"
                app:layout_constraintTop_toBottomOf="@+id/spinner_background"
                />

            <Spinner
                android:id="@+id/spinner_custom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/title_custom_layout"
                />

            <TextView
                android:id="@+id/title_custom_adapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/custom_adapter"
                app:layout_constraintTop_toBottomOf="@+id/spinner_custom_layout"
                />

            <Spinner
                android:id="@+id/spinner_custom_adapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/form_margin_top"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/title_custom_adapter"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
